objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Amount_to_be_invoiced__c</fullName>
        <formula>Amount -  Total_Invoiced_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount to be invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Support - Upfront</fullName>
                </value>
                <value>
                    <fullName>Support - Retainer</fullName>
                </value>
                <value>
                    <fullName>Support - T&amp;M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlendedRate__c</fullName>
        <formula>Amount /  Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blended Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Synced Project</label>
        <referenceTo>Project_Costing__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Months__c</fullName>
        <formula>IF(NOT(ISBLANK(Project_End__c)) &amp;&amp; NOT(ISBLANK(Project_Start__c))
     ,(((YEAR(Project_End__c ) - YEAR(Project_Start__c ) - 1) *12) + (12 - MONTH(Project_Start__c ) +1) + MONTH(Project_End__c ))
     , null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_records__c</fullName>
        <label>No. of records</label>
        <summaryForeignKey>Project_Costing__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PO_No__c</fullName>
        <label>PO No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Month_Hours__c</fullName>
        <formula>IF(OR(Total_Hours__c = 0 , No_of_Months__c = 0) , 0, Total_Hours__c / No_of_Months__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Month Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_End__c</fullName>
        <label>Project End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start__c</fullName>
        <description>Project commencement date</description>
        <label>Project Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Amount__c</fullName>
        <label>Total Invoiced Amount</label>
        <summarizedField>Invoice__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Expense_Only__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Hours__c</fullName>
        <label>Total Invoiced Hours</label>
        <summarizedField>Invoice__c.Hours__c</summarizedField>
        <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT TO PACKAGE. Only for unit test</description>
        <label>XXX Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated company.</description>
        <label>Company</label>
        <referenceTo>fferpcore__Company__c</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractEndDate__c</fullName>
        <description>Date on which the contract ends.</description>
        <inlineHelpText>Date on which the contract ends.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractFirstBillDate__c</fullName>
        <description>First date on which the contract is to be billed.</description>
        <inlineHelpText>First date on which the contract is to be billed.</inlineHelpText>
        <label>Contract First Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractStartDate__c</fullName>
        <description>Date from which billing can commence for the contract.</description>
        <inlineHelpText>Date from which billing can commence for the contract.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contract to which this opportunity relates.</description>
        <inlineHelpText>Lookup to the contract to which this opportunity relates.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>ffbc__Contract__c</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>RelatedOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__OriginalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the opportunity from which this opportunity originated.</description>
        <inlineHelpText>Lookup to the opportunity from which this opportunity originated.</inlineHelpText>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Original Opportunities</relationshipLabel>
        <relationshipName>OriginalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT TO PACKAGE. Only for unit test</description>
        <label>XXX Batch Process</label>
        <referenceTo>ffr__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Curve__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast Curve</label>
        <referenceTo>pse__Forecast_Curve__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__IsParentOpportunityServices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated:IsParentOpportunityServices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Change_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Services_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this is a services opportunity</inlineHelpText>
        <label>Is Services Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Child Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__PreBilledAmount__c</fullName>
        <description>This field is deprecated. It has been replaced by Pre-Billed Amount (Pre_Billed_Amount__c).</description>
        <label>DEPRECATED: Pre-Billed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Pre_Billed_Amount__c</fullName>
        <description>This field is a replacement for the old Pre-Billed Amount field (PreBilledAmount__c) which did not allow non-integer decimals.</description>
        <inlineHelpText>This field is a replacement for the old Pre-Billed Amount field (PreBilledAmount__c) which did not allow non-integer decimals.</inlineHelpText>
        <label>Pre-Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Primary_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Primary Project For Opportunities</relationshipLabel>
        <relationshipName>PrimaryProjectForOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card_Discount_Limit__c</fullName>
        <description>The rate card&apos;s minimum suggested bill rate to which the discount will be applied.</description>
        <inlineHelpText>The rate card&apos;s minimum suggested bill rate to which the discount will be applied.</inlineHelpText>
        <label>Rate Card Discount Limit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card_Percentage_Discount__c</fullName>
        <description>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request on an opportunity.</description>
        <inlineHelpText>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request on an opportunity.</inlineHelpText>
        <label>Rate Card Percentage Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</description>
        <inlineHelpText>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</inlineHelpText>
        <label>Rate Card Set</label>
        <referenceTo>pse__Rate_Card_Set__c</referenceTo>
        <relationshipLabel>Rate Card Set Opportunities</relationshipLabel>
        <relationshipName>Rate_Card_Set_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Services_Attached_From_Products__c</fullName>
        <label>Services Attached From Products</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.pse__IsServicesProductLine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Services_Attached_Percent_From_Products__c</fullName>
        <formula>IF (Amount = 0, 0 , pse__Services_Attached_From_Products__c / Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Attached % From Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Billing_Type__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Total_Invoiced_Amount__c</columns>
        <columns>Amount_to_be_invoiced__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Project_Start__c</columns>
        <columns>Project_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <label>All Opportunities Won &amp; Open</label>
    </listViews>
    <listViews>
        <fullName>All_Ongoing_Projects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Start__c</columns>
        <columns>Project_End__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Total_Hours__c</columns>
        <columns>Total_Invoiced_Amount__c</columns>
        <columns>Amount_to_be_invoiced__c</columns>
        <columns>Total_Invoiced_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Ongoing Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_Won</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Start__c</columns>
        <columns>Project_End__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Total_Hours__c</columns>
        <columns>Total_Invoiced_Amount__c</columns>
        <columns>Amount_to_be_invoiced__c</columns>
        <columns>Total_Invoiced_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <label>All Opportunities Won &amp; Project Info</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_Won_Open_2019</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Total_Hours__c</columns>
        <columns>Project_Start__c</columns>
        <columns>Project_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Stalled</value>
        </filters>
        <label>All Opportunities Won &amp; Open 2019</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Data_Quality_Description__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Updated_last_month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Identify Opportunity,Discovery,Develop Proposal,Customer Engagement,Finalize,Closed Won</value>
        </filters>
        <label>Updated last month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Updated_last_1_week</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:6</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Identify Opportunity,Discovery,Develop Proposal,Customer Engagement,Finalize,Closed Won,Closed Lost</value>
        </filters>
        <label>Updated last 1 week</label>
    </listViews>
    <listViews>
        <fullName>Updated_last_2_weeks</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:21</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Lead,Qualify Opportunity,Validate Offering,Develop Proposal,Secure &amp; Negotiate,PO in Progress,Closed Won</value>
        </filters>
        <label>Updated last 2 weeks</label>
    </listViews>
    <listViews>
        <fullName>Updated_this_week</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Updated this week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_Date_Logic</fullName>
        <active>true</active>
        <errorConditionFormula>Project_End__c &lt; Project_Start__c</errorConditionFormula>
        <errorDisplayField>Project_End__c</errorDisplayField>
        <errorMessage>End date cannot be earlier than start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Logic</fullName>
        <active>true</active>
        <errorConditionFormula>Project_Start__c &gt; Project_End__c</errorConditionFormula>
        <errorDisplayField>Project_Start__c</errorDisplayField>
        <errorMessage>Start date cannot be later than end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Discount_Rates_Must_Be_Between_0_to_100</fullName>
        <active>false</active>
        <description>The Rate Card Percentage Discount must be between 0 and 100.</description>
        <errorConditionFormula>pse__Rate_Card_Percentage_Discount__c &lt; 0 || pse__Rate_Card_Percentage_Discount__c &gt; 100</errorConditionFormula>
        <errorMessage>The Rate Card Percentage Discount must be between 0 and 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Opp_Rate_Card_Set_Currency_Mismatch</fullName>
        <active>true</active>
        <description>The currency must be the same for the opportunity and the rate card set.</description>
        <errorConditionFormula>(pse__Rate_Card_Set__c &lt;&gt; NULL) &amp;&amp;(ISPICKVAL(CurrencyIsoCode, &apos;&apos;) ||
		ISPICKVAL(pse__Rate_Card_Set__r.CurrencyIsoCode , &apos;&apos;) ||
		(TEXT(pse__Rate_Card_Set__r.CurrencyIsoCode) &lt;&gt; TEXT(CurrencyIsoCode)))</errorConditionFormula>
        <errorMessage>You cannot associate the rate card set with the opportunity. They must both use the same currency.</errorMessage>
    </validationRules>
</CustomObject>